*--Changelog--*

4/16/2020
- Seen / Unseen message
- new SearchActivity
- Database improve, create chatlist to show in ChatsFragment
- Login/Register progressing response (prevent users click button many times)
4/18/2020
- Notification
4/19/2020
- Profile Activity
- Build SearchActivity instead SearchFragment
                                                   + use card view for search result
                                                   + improve search box and search result
                                                   + search keyboard layout and ActionListener
4/20/2020
- Notify unread number on chatlist
- Dont send noti of that user while chatting with that user
4/22/2020
- Update some UI

4/23/2020
- phone authentication
- new profile activity
    + driver license verification
    + add car to id (max 3)

4/26/2020
- show own cars on profile activity

4/27/2020
- add auto complete text view province to AddCarDialog
- add color spinner to AddCarDialog
- Change Style "Add" and "Cancle" Button in AddCarDialog

4/28/2020
- Search users by car id

4/30/2020
- improve register and login design

5/2/2020
- show chat list and message by car id
- separate each car id fragment

5/3/2020
- remove some junk code
- fix notification
- register must be input firstname and lastname
- delete search_name , username and imageURL
- add progress bar to SearchActivity
- unverified user will show red

5/4/2020
- add splash screen on start up

5/5/2020
- add giffy dialog

5/8/2020
- keyboard hidden when click search
- add clear text button on search edit text
- show date in message activity

5/9/2020
- show "today" in MessageActivity if sent message date is today and show only sent time on last message
- if message is not older than years, show only date and month
- add delete chatlist and delete car
- add report an inappropriate user
- fix little bug