@@ -67,4 +67,5 @@
 - if message is not older than years, show only date and month
 - add delete chatlist and delete car
 - add report an inappropriate user
-- fix little bug
+- fix minor bug
+- hidden phone number when register
